--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -14,6 +14,10 @@ nav {
     top: 0px;
     font-family: 'Cairo', sans-serif;
 }
+
+a {
+    cursor: pointer;
+}
 /* 
 .petshopLogo{
     float: left;
